# pkg-sagasu

./: AUTHORS  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  configure  configure.ac  sagasu.spec  sagasu.spec.in
debian/: changelog  control  copyright  dirs  install  menu  rules  watch
debian/patches/: danielpatch.diff  fix-glib-header.diff  series
help/: sagasu.1
help/C/: sagasu.html
help/fr/: sagasu.html
macros/: Makefile.am  Makefile.in  ac_func_snprintf.m4
po/: LINGUAS  Makevars  POTFILES.in  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  fr.gmo  fr.po  ja.gmo  ja.po  ru.gmo  ru.po  sagasu.pot  sr.gmo  sr.po
src/: Makefile.am  Makefile.in  ResultPage.cpp  ResultPage.h  SagasuApp.cpp  SagasuApp.h  callbacks.h  main.cpp  sagasu-helper.pl  sagasu.desktop.in  util.cpp  util.h
src/images/: close.xpm
