EXTRA_DIST = codeset.m4 gettext.m4 glibc21.m4 iconv.m4 intdiv0.m4 \
	inttypes.m4 inttypes_h.m4 inttypes-pri.m4 isc-posix.m4 lcmessage.m4 \
	lib-ld.m4 lib-link.m4 lib-prefix.m4 progtest.m4 stdint_h.m4 \
	uintmax_t.m4 ulonglong.m4 \
	\
	ac_prog_perl_modules.m4 \
	ac_func_snprintf.m4 \
	ac_compile_warnings.m4

MAINTAINERCLEANFILES = Makefile.in
